fixtures/runtime/invalid/errors/undefined-function.php
<?php
// phase4: kind=invalid expected_rust_status=runtime_error diagnostic_id=E_PHP_RUNTIME_UNDEFINED_FUNCTION
phase4_missing_function();
